# system_tray_linux_aio

./: .gitignore  ALOE_IMPLEMENTATION_GUIDE.md  Cargo.toml  FINAL_SUMMARY.md  HOW_TO_RUN.md  IMPLEMENTATION_STRATEGY.md  PROJECT_STATUS.md  README.md  WORKING_APP_INFO.md  build.rs  test_tray.sh
.github/workflows/: ci.yml
examples/: aloe_api_example.rs  basic_tray.rs  stray_example.rs  stray_interactive.rs
src/: error.rs  lib.rs  main.rs
src/aloe_compat/: mod.rs
src/config/: mod.rs  tests.rs
src/contrib/: linux_impl_example.rs  mod.rs
src/menu/: mod.rs
src/stray_impl/: mod.rs
src/tray/: linux_impl.rs  mod.rs  working_impl.rs
tests/: integration_test.rs
