[package]
name = "system_tray_linux_aio"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <anubhavg@infopercept.com>"]
description = "A production-ready system tray application using aloe-system-tray"
repository = "https://github.com/anubhavg-icpl/system_tray_linux_aio"
license = "GPL-3.0"
keywords = ["system-tray", "tray", "linux", "cross-platform", "aloe"]
categories = ["gui", "os"]

[dependencies]
# Working system tray implementation
tray-icon = "0.21"
image = "0.25"
gtk = "0.18"

# NOTE: aloe-system-tray has build issues on Linux due to macOS dependencies
# We implement a compatibility layer that matches its API

tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
